--- a/knjiga.css
+++ b/knjiga.css
@@ -12,6 +12,10 @@ header {
   background-color:  grey;
   padding: 5px;
   color: white;
+  margin: 0;
+}
+header h1 {
+  margin-bottom: 3px;
 }
 .zaglavlje-text {
   margin-left: 4.5%;
@@ -20,6 +24,7 @@ header {
   font-weight:300;
   padding-right: 10px;
 }
+
 /* Section */
 section {
   margin-top: -20px;
@@ -29,7 +34,7 @@ section {
 }
 /* Section - biografija/text */
 .biografija {
-  width: 300px;
+  width: 50%;
 } 
 .biografija h2 {
   padding: 20px 20px 0;
@@ -40,6 +45,7 @@ section {
 .biografija p {
   font-family: 'Optima';
   margin-left: 60px;
+  font-size: 1.2em;
 }
 /* Section-portret */
 .portret img {
@@ -55,7 +61,7 @@ nav ul {
   list-style-type: none;
   display: flex;
   justify-content: flex-start;
-  padding-left: 0;
+  margin: 14px;
 }
 li a {
   text-decoration: none;
@@ -66,19 +72,20 @@ li a {
   background-color: #ced4da;
   padding:12px 20px;
   border-radius: 5px;
-  margin-right: 5px;
-  margin-left: 5px;
+  margin-left: 3px;
   
   }
 /* Artikli - okvir */
 article {
   display: flex;
-  justify-content: space-around;
-  background-color: #dee2e6;
+  justify-content:flex-start;
+  background-color: white;
+  margin-left: 30px;
 }
 /* Artikli - slike */
 article img {
   margin-top: 15px;
   margin-bottom: 15px;
-  border: 1px solid #adb5bd;
+  border: 2px solid #adb5bd;
+  margin-left: 30px;
 }
