--- a/knjiga.css
+++ b/knjiga.css
@@ -60,15 +60,14 @@ nav ul {
   list-style-type: none;
   display: flex;
   justify-content: flex-start;
-  margin: 14px;
+  margin-left: 5px;
   position: relative;
   
 }
-
 #facebook {
   background-color: #219ebc;
   position:absolute;
-  right: -16px;
+  right: 0;
   top: -16px;
   padding: 14px 45px;
   color: white;
@@ -76,7 +75,7 @@ nav ul {
  #instagram {
   background-color: #219ebc;
   position:absolute;
-  right: 172px;
+  right: 187px;
   top: -16px;
   padding: 14px 45px;
   color: white;
@@ -88,9 +87,9 @@ li a {
   font-size: 1.5em;
   border: 1px solid #adb5bd;
   background-color: #ced4da;
-  padding:10px 20px;
+  padding:10px 30px;
   border-radius: 5px;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 /* Artikli - okvir */
