--- a/knjiga.css
+++ b/knjiga.css
@@ -12,7 +12,7 @@ header {
   background-color:  grey;
   padding: 5px;
   color: white;
-  margin: 0;
+ 
 }
 header h1 {
   margin-bottom: 3px;
@@ -105,4 +105,12 @@ article img {
   margin-bottom: 15px;
   border: 2px solid #adb5bd;
   margin-left: 30px;
+}
+/* Footer */
+footer {
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  padding-top: 10px;
+ margin-bottom: -40px;
 }
