--- a/knjiga.css
+++ b/knjiga.css
@@ -2,115 +2,94 @@
   box-sizing: border-box;
 }
 body {
-  margin: 0;
-  border-left: 40px solid grey;
-  border-right: 40px solid grey;
-  border-bottom: 40px solid grey;
+  margin:0;
 }
-/* Zaglavlje */
-header {
-  background-color:  grey;
-  padding: 5px;
-  color: white;
+.mima-arbid {
+  max-width: 100%;
+  height: 390px;
+  display: flex;
+  justify-content: space-around;
+  background-image: url('slike/glavna.jpg');
+  background-position: 0 50%;
  
 }
-header h1 {
-  margin-bottom: 3px;
-}
-.zaglavlje-text {
-  margin-left: 4.5%;
-  margin-bottom: 2px;
-  font-family: Helvetica, sans-serif;
-  font-weight:300;
-  padding-right: 10px;
-}
-/* Section */
-section {
-  margin-top: -20px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: -4px;
-}
-/* Section - biografija/text */
-.biografija {
-  width: 50%;
-} 
-.biografija h2 {
-  padding: 20px 20px 0;
-  font-family: 'Optima bold';
-  margin: 30px 40px 0;
-  font-size: 1.7em;
-}
-.biografija p {
-  font-family: 'Optima';
-  margin-left: 60px;
-  font-size: 1.2em;
-}
-/* Section-portret */
-.portret img {
-  margin-top: 20px;
-}
-/* Navigation Bar (books, paintings, amazon, instagram, facebook */
-nav {
-  max-width:100%;
-  padding: 2px;
-  background-color: #adb5bd;
-}
-nav ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 5px;
+.mima-arbid header {
+  flex: 3;
+  margin-left: 15%;
+  margin-top:-30px;
   position: relative;
+  height: 80%;
+  color:beige;
+}
+#simbol {
+  position: absolute;
+  top: -35px;
+  left: 175px;
+  font-size: 4em;
   
 }
-#facebook {
-  background-color: #219ebc;
-  position:absolute;
-  right: 0;
-  top: -16px;
-  padding: 14px 45px;
-  color: white;
- }
- #instagram {
-  background-color: #219ebc;
-  position:absolute;
-  right: 187px;
-  top: -16px;
-  padding: 14px 45px;
-  color: white;
- }
-li a {
-  text-decoration: none;
-  color: black;
-  font-family: "Optima";
-  font-size: 1.5em;
-  border: 1px solid #adb5bd;
-  background-color: #ced4da;
-  padding:10px 30px;
-  border-radius: 5px;
-  margin-left: 10px;
+.mima-arbid h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:4.8em;
+  margin-bottom: 0%;
+  font-weight: lighter;
+}
+.mima-arbid p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size:1.5em;
+  color:white;
+  margin-top: -17px;
+  margin-left: 85px;
 }
 
-/* Artikli - okvir */
-article {
+
+.navigation-bar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   display: flex;
-  justify-content:flex-start;
-  background-color: white;
-  margin-left: 30px;
+  margin-top: 2%;
+  margin-right: 8%;
+  font-size: 1.1em;
+  flex: 1
 }
-/* Artikli - slike */
-article img {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  border: 2px solid #adb5bd;
-  margin-left: 30px;
+.navigation-bar li a {
+  text-decoration: none;
+  color:beige;
+ 
 }
-/* Footer */
-footer {
-  width: 100%;
-  height: 100px;
+.navigation-bar li {
+  padding: 10px 25px;
+}
+.biografija {
+  display: flex;
+  background-color:#F9E79F;
   text-align: center;
-  padding-top: 10px;
- margin-bottom: -40px;
+
 }
+.biografija img {
+  margin:25px 50px;
+}
+.biografija-text {
+   font-size: 1.2em;
+   margin-top: 5px;
+   left: 30%;
+   line-height: 17px;
+   position: absolute;
+   z-index: 1;
+   letter-spacing: 1px;
+}
+.biografija span {
+  font-size: 1.3em;
+  opacity: 0.5;
+}
+.biografija p {
+  position: absolute;
+  top: -80px;
+  font-size: 9.5em;
+  z-index: -1;
+  color: rgba(256, 256, 256, 0.35);
+  left: 17%;
+  letter-spacing: 3px;
+}
+
