--- a/knjiga.css
+++ b/knjiga.css
@@ -6,7 +6,7 @@ body {
 }
 .mima-arbid {
   max-width: 100%;
-  height: 390px;
+  height: 380px;
   display: flex;
   justify-content: space-around;
   background-image: url('slike/glavna.jpg');
@@ -16,30 +16,30 @@ body {
 .mima-arbid header {
   flex: 3;
   margin-left: 15%;
-  margin-top:-30px;
+  margin-top:-20px;
   position: relative;
   height: 80%;
   color:beige;
 }
 #simbol {
   position: absolute;
-  top: -35px;
-  left: 160px;
-  font-size: 3.7em;
+  top: -18px;
+  left: 130px;
+  font-size: 2.7em;
   
 }
 .mima-arbid h1 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size:4.5em;
+  font-size:3.5em;
   margin-bottom: 0%;
   font-weight: lighter;
 }
 .mima-arbid p {
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size:1.5em;
+  font-size:1.3em;
   color:white;
-  margin-top: -17px;
-  margin-left: 85px;
+  margin-top: -10px;
+  margin-left: 60px;
 }
 
 
@@ -63,12 +63,12 @@ body {
 }
 .biografija {
   display: flex;
-  background-color:#F9E79F;
+  background-color:#f8ebb8;
   text-align: center;
-
+  
 }
 .biografija img {
-  margin:25px 60px;
+  margin:30px 60px;
 }
 .biografija-text {
    font-size: 1.2em;
@@ -88,7 +88,7 @@ body {
   top: -80px;
   font-size: 9.5em;
   z-index: -1;
-  color: rgba(256, 256, 256, 0.35);
+  color: rgba(256, 256, 256, 0.45);
   left: 19%;
   letter-spacing: 3px;
 }
