--- a/knjiga.css
+++ b/knjiga.css
@@ -6,11 +6,12 @@ body {
 }
 .mima-arbid {
   max-width: 100%;
-  height: 380px;
+  height: 450px;
   display: flex;
   justify-content: space-around;
   background-image: url('slike/glavna.jpg');
-  background-position: 0 50%;
+  background-position: 0 87%;
+  background-size:cover;
  
 }
 .mima-arbid header {
@@ -48,14 +49,14 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  margin-top: 2%;
+  margin-top: 10px;
   margin-right: 12%;
   font-size: 1.1em;
   flex: 1
 }
 .navigation-bar li a {
   text-decoration: none;
-  color:beige;
+  color:white;
   
 }
 .navigation-bar li {
