--- a/knjiga.css
+++ b/knjiga.css
@@ -97,7 +97,6 @@ body {
 }
 .mima-art {
   margin-top: 40px;
- 
 }
 .mima-art img {
   display: block;
@@ -105,61 +104,74 @@ body {
   margin-right: auto;
   width: 50%;
   height: auto;
- 
 }
 #palm {
   margin-left: 25%;
 }
+.art-blok {
+  margin-left: 10%;
+  margin-top: 20px;
+  display: block;
+}
+#palm2 {
+  width: 30%;
+  height: auto;
+  float: left;
+}
+#palm3 {
+  width: 50.6%;
+  height: auto;
+  float: left;
+  margin-left: 10%;
+}
+
 @media screen and (min-width: 978px) and (max-width: 1200px) {
+  
   .mima-arbid header {
-   margin-left: 15%;
- }
- .navigation-bar li {
-  padding: 10px 23px;
-}
-.navigation-bar {
-  margin-right: 10%;
-}
-.biografija p {
-  left: 17%;
-}
+    margin-left: 15%;
+  }
+  .navigation-bar li {
+    padding: 10px 23px;
+  }
+  .navigation-bar {
+    margin-right: 10%;
+  }
+  .biografija p {
+    left: 17%;
+  }
 }
 @media screen and (min-width: 787px) and (max-width:977px) {
- 
- .navigation-bar li {
-  padding: 10px 14px;
-}
-.mima-arbid h1 {
   
-  font-size:2.7em;
-}
-.navigation-bar {
-  margin-right: 5%;
-  font-size: 1em;
-
-}
-.mima-arbid header {
-  margin-left: 12%;
-  margin-top:-5px;
-}
-.biografija img {
-  width: 210px;
-  height: 150px;
-  margin-left: 20px;
-  margin-top:45px;
-}
-.biografija-text {
-  font-size: 0.9.em;
-  margin-top: 5px;
-  left: 170px;
-  right: 5%;
-  position: absolute;
-  z-index: 1;
-  letter-spacing: 0;
-  
-}
-.biografija p {
-  left: 18%;
-}
-
+  .navigation-bar li {
+    padding: 10px 14px;
+  }
+  .mima-arbid h1 {
+    font-size:2.7em;
+  }
+  .navigation-bar {
+    margin-right: 5%;
+    font-size: 1em;
+  }
+  .mima-arbid header {
+    margin-left: 12%;
+    margin-top:-5px;
+  }
+  .biografija img {
+    width: 210px;
+    height: 150px;
+    margin-left: 20px;
+    margin-top:45px;
+  }
+  .biografija-text {
+    font-size: 0.9.em;
+    margin-top: 5px;
+    left: 170px;
+    right: 5%;
+    position: absolute;
+    z-index: 1;
+    letter-spacing: 0;
+  }
+  .biografija p {
+    left: 18%;
+  }
 }
