--- a/knjiga.css
+++ b/knjiga.css
@@ -68,8 +68,10 @@ body {
   text-align: center;
   position: relative;
 }
+
 .biografija img {
-  margin:30px 60px;
+  margin-top:30px;
+  margin-left: 4%;
 }
 .biografija-text {
    font-size: 1.2em;
@@ -92,7 +94,7 @@ body {
   font-size: 9.5em;
   z-index: -1;
   color: rgba(256, 256, 256, 0.95);
-  left: 22%;
+  left: 19%;
   letter-spacing: 3px;
 }
 .mima-art {
@@ -136,8 +138,12 @@ body {
   .navigation-bar {
     margin-right: 10%;
   }
+  .biografija-text {
+    left: 29.7%;
+    right: 7%;
+  }
   .biografija p {
-    left: 17%;
+    left: 15%;
   }
 }
 @media screen and (min-width: 787px) and (max-width:977px) {
@@ -156,17 +162,18 @@ body {
     margin-left: 12%;
     margin-top:-5px;
   }
+  
   .biografija img {
     width: 210px;
     height: 150px;
-    margin-left: 20px;
+    margin-left: 3%;
     margin-top:45px;
   }
   .biografija-text {
     font-size: 0.9.em;
     margin-top: 5px;
-    left: 170px;
-    right: 5%;
+    left: 22%;
+    right: 3%;
     position: absolute;
     z-index: 1;
     letter-spacing: 0;
