--- a/knjiga.css
+++ b/knjiga.css
@@ -3,10 +3,11 @@
 }
 body {
   margin:0;
+ 
 }
 .mima-arbid {
   max-width: 100%;
-  height: 380px;
+  min-height: 55vh;
   display: flex;
   justify-content: space-around;
   background-image: url('slike/glavna.jpg');
@@ -67,15 +68,18 @@ body {
   background-color:#f8eec9;
   text-align: center;
   position: relative;
+ padding-bottom: 4%;
+ min-height: 250px;
+
 }
 
 .biografija img {
-  margin-top:30px;
+  margin-top:4%;
   margin-left: 4%;
 }
 .biografija-text {
    font-size: 1.2em;
-   margin-top: 5px;
+   margin-top: 2%;
    left: 30%;
    right: 10%;
    line-height: 17px;
