--- a/knjiga.css
+++ b/knjiga.css
@@ -7,41 +7,37 @@ body {
 }
 .mima-arbid {
   max-width: 100%;
-  min-height: 55vh;
+  height: 100vh;
   display: flex;
   justify-content: space-around;
-  background-image: url('slike/glavna.jpg');
-  background-position: 0 86%;
-  background-size: cover;
+  background-image: url('slike/pozadina-naslovna.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+
+ 
 }
 .mima-arbid header {
   flex: 3;
-  margin-left: 20%;
-  margin-top:-20px;
+  margin-left: 15.7%;
+  margin-top: 20px;
   position: relative;
   height: 80%;
   color:beige;
 }
-#simbol {
-  position: absolute;
-  top: -18px;
-  left: 130px;
-  font-size: 2.7em;
-  
-}
+
 .mima-arbid h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size:3.5em;
+  font-family: "Sacramento";
+  font-size:4.8em;
   margin-bottom: 0%;
   font-weight: lighter;
  
 }
 .mima-arbid p {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size:1.3em;
+  font-family: "Montserrat";
+  font-size:1.6em;
   color:white;
-  margin-top: -10px;
-  margin-left: 60px;
+  margin-top: -30px;
+  margin-left: 108px;
 }
 
 
@@ -50,106 +46,70 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  margin-top: 10px;
-  margin-right: 12%;
-  font-size: 1.1em;
+  margin-top: 40px;
+  margin-right: 7%;
+  font-size: 1.em;
   flex: 1
 }
 .navigation-bar li a {
+  font-family: "Montserrat";
   text-decoration: none;
   color:white;
-  
 }
 .navigation-bar li {
   padding: 10px 25px;
 }
 .biografija {
+  
   display: flex;
   background-color:#f8eec9;
   text-align: center;
-  position: relative;
- padding-bottom: 4%;
- min-height: 250px;
-
+ align-items: center;
+  height: 450px;
+  justify-content: space-between;
 }
-
 .biografija img {
-  margin-top:4%;
+  margin-top: 20px;
   margin-left: 4%;
+ width: 30%;
+height: auto;
+ 
 }
 .biografija-text {
-   font-size: 1.2em;
-   margin-top: 2%;
-   left: 30%;
+  width: 70%;
+  font-size: 110%;
+   line-height: 22px;
+   margin-top: 0;
+   /* left: 35%;
    right: 10%;
    line-height: 17px;
    position: absolute;
+   */
    z-index: 1;
-   letter-spacing: 1px;
+   font-family: "Marion";
+ 
    
 }
 .biografija span {
   font-size: 1.3em;
   opacity: 0.5;
+  font-family: "Wingdings 2";
+  color: grey;
 }
 .biografija p {
   position: absolute;
-  top: -80px;
-  font-size: 9.5em;
+ 
+  top: -100px;
+  font-size: 14em;
   z-index: -1;
   color: rgba(256, 256, 256, 0.95);
-  left: 19%;
+  left:4%;
+  font-family: "Sacramento";
   letter-spacing: 3px;
 }
-.mima-art {
-  margin-top: 40px;
-}
-.mima-art img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  height: auto;
-}
-#palm {
-  margin-left: 25%;
-}
-.art-blok {
-  margin-left: 10%;
-  margin-top: 20px;
-  display: block;
-}
-#palm2 {
-  width: 30%;
-  height: auto;
-  float: left;
-}
-#palm3 {
-  width: 50.6%;
-  height: auto;
-  float: left;
-  margin-left: 10%;
-}
 
-@media screen and (min-width: 978px) and (max-width: 1200px) {
-  
-  .mima-arbid header {
-    margin-left: 15%;
-  }
-  .navigation-bar li {
-    padding: 10px 23px;
-  }
-  .navigation-bar {
-    margin-right: 10%;
-  }
-  .biografija-text {
-    left: 29.7%;
-    right: 7%;
-  }
-  .biografija p {
-    left: 15%;
-  }
-}
+
+
 @media screen and (min-width: 787px) and (max-width:977px) {
   
   .navigation-bar li {
