--- a/knjiga.css
+++ b/knjiga.css
@@ -34,7 +34,7 @@ body {
 /* Gornja sekcija (Artist & writer) */
 .mima-arbid p {
   font-family: "Montserrat";
-  font-size:1.6em;
+  font-size: 1.5em;
   color:white;
   margin-top: -30px;
   margin-left: 110px;
@@ -71,24 +71,22 @@ body {
 .biografija img {
   margin-top: 20px;
   margin-left: 4%;
-  width: 30%;
-  height: auto;
- 
+  
 }
 /* Druga sekcija (text) */
 .biografija-text {
   width: 70%;
   height:auto;
-  font-size: 110%;
-   line-height: 22px;
-   margin-top: 0;
+  font-size: 1.2em;
+  line-height: 22px;
+  margin-top: 0;
    /* left: 35%;
    right: 10%;
    line-height: 17px;
    position: absolute;
    */
-   z-index: 1;
-   font-family: "Marion";
+  z-index: 1;
+  font-family: "Marion";
 }
 /* Druga sekcija (Wingdings 2, simbol */
 .biografija span {
@@ -163,16 +161,18 @@ body {
   color: #3d6877;
   margin-top: 0px;
   text-align: center;
-  font-family: "Marion";
-  font-size: 2.2vw;
+  font-size: 1.7vw;
   font-style: italic;
   padding-top: 40px;
+  margin-bottom: 60px;
+  font-family: "Marion";
 }
 /* Slika (planina) */
 .planina {
   background-color: #3d6877;
   margin-top: -32px;
   color: white;
+  padding-bottom: 30px;
 }
 .planina img {
   width: 85%;
@@ -187,11 +187,12 @@ body {
 }
 .about2 {
   color: white;
+  font-family: "Marion";
   width: 100%;
   text-align: center;
-  font-family: "Marion";
-  font-size: 2.2vw;
+  font-size: 1.8vw;
   font-style: italic;
+  margin-top: 30px;
 }
 /* Mima - personal */
 .mima-personal {
@@ -213,7 +214,6 @@ body {
   margin-top: 40px;
   position: absolute;
   left: 40%;
-  font-family: "Marion";
   font-size: 1.3vw;
   color: #3d6877;
   line-height: 24px;
@@ -227,9 +227,9 @@ body {
 }
 footer {
   position: relative;
-  top: 50px;
+  margin-top: 33%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   height: 120px;
@@ -240,14 +240,29 @@ footer {
   font-family: "Sacramento";
   font-size: 3.7vw;
 }
-#pismo, #facebook {
+#pismo {
   font-family: "Wingdings";
   font-size: 3.7vw;
 }
 .contact {
-margin-left: -170px;
+margin-left: -14%;
 margin-bottom: 0;
 }
 .contact p:first-of-type {
+  font-size: 1vw;
   margin-bottom: -10px;
+}
+.contact p:last-of-type a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.3vw;
+}
+#facebook {
+  font-family: "Arial";
+  font-weight: bolder;
+  font-size: 3vw;
+}
+#facebook a {
+  color: white;
+  text-decoration: none;
 }
