--- a/knjiga.css
+++ b/knjiga.css
@@ -6,38 +6,38 @@ body {
 }
 /* Gornja sekcija - glavna slika(background) */
 .mima-arbid {
-  max-width: 100%;
-  height: 100vh;
+  width: 100%;
+  height: 46vw;
   display: flex;
   justify-content: space-around;
   background-image: url('slike/pozadina-naslovna.png');
-  background-repeat: no-repeat;
   background-size: 100% 100%;
+
 }
 /* Gornja sekcija (Mima Arbid, Artist & writer */
 .mima-arbid header {
   flex: 3;
-  margin-left: 15.7%;
-  margin-top: 20px;
+  margin-left: 8.5%;
+  margin-top: -3.5%;
   position: relative;
-  height: 80%;
   color:beige;
 }
 /* Gornja sekcija (Mima Arbid) */
 .mima-arbid h1 {
   font-family: "Sacramento";
-  font-size: 5em;
+  font-size: 8.2vw;
   margin-bottom: 0%;
   font-weight: lighter;
- 
+  position: relative;
 }
 /* Gornja sekcija (Artist & writer) */
 .mima-arbid p {
+  position: absolute;
+  left: 22%;
+  top: 25%;
   font-family: "Montserrat";
-  font-size: 1.5em;
+  font-size: 2.9vw;
   color:white;
-  margin-top: -30px;
-  margin-left: 110px;
 }
 /* Navigation bar (about, books, arts, contact*/
 .navigation-bar {
@@ -45,40 +45,42 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  margin-top: 40px;
-  margin-right: 7%;
-  font-size: 1.em;
-  flex: 1
-}
-.navigation-bar li {
-  padding: 10px 25px;
+  margin-top: 3.7%;
+  margin-right: 5%;
+  font-size: 2vw;
+  flex: 1;
 }
 .navigation-bar li a {
+  padding: 0 22px;
   font-family: "Montserrat";
   text-decoration: none;
   color:white;
+  letter-spacing: 2.4px;
+  font-size: 1vw;
 }
 /*Druga sekcija (slika sa šeširom, text) */
 .biografija {
+  width: 100%;
   display: flex;
   background-color:#FEFFD1;
   text-align: center;
   align-items: center;
-  height: 450px;
+  height:35vw;
   justify-content: space-between;
 }
 /* Druga sekcija (slika sa šeširom) */
 .biografija img {
-  margin-top: 20px;
+  margin-top: -2%;
   margin-left: 4%;
-  
+  width: 30%;
+  height: auto;
 }
 /* Druga sekcija (text) */
 .biografija-text {
   width: 70%;
   height:auto;
-  font-size: 1.2em;
-  line-height: 22px;
+  font-size: 1.2vw;
+  line-height: 21px;
   margin-top: 0;
    /* left: 35%;
    right: 10%;
