--- a/knjiga.css
+++ b/knjiga.css
@@ -10,35 +10,11 @@ body {
   height: 46vw;
   display: flex;
   justify-content: space-around;
-  background-image: url('slike/pozadina-naslovna.png');
+  background-image: url('slike/pozadina-naslovna sa mima.png');
   background-size: 100% 100%;
 
 }
-/* Gornja sekcija (Mima Arbid, Artist & writer */
-.mima-arbid header {
-  flex: 3;
-  margin-left: 8.5%;
-  margin-top: -3.5%;
-  position: relative;
-  color:beige;
-}
-/* Gornja sekcija (Mima Arbid) */
-.mima-arbid h1 {
-  font-family: "Sacramento";
-  font-size: 8.2vw;
-  margin-bottom: 0%;
-  font-weight: lighter;
-  position: relative;
-}
-/* Gornja sekcija (Artist & writer) */
-.mima-arbid p {
-  position: absolute;
-  left: 22%;
-  top: 25%;
-  font-family: "Montserrat";
-  font-size: 2.9vw;
-  color:white;
-}
+
 /* Navigation bar (about, books, arts, contact*/
 .navigation-bar {
   list-style-type: none;
@@ -46,9 +22,9 @@ body {
   padding: 0;
   display: flex;
   margin-top: 3.7%;
-  margin-right: 5%;
+  margin-left: 58%;
   font-size: 2vw;
-  flex: 1;
+  justify-content: flex-end;
 }
 .navigation-bar li a {
   padding: 0 22px;
@@ -195,8 +171,8 @@ body {
   float: left;
   align-items: flex-end;
   margin-top: 50px;
-  position: relative;
-  margin-left: 90px;
+  position: static;
+  margin-left: 5%;
 }
 .mima-personal img {
   width: 28%;
@@ -242,27 +218,27 @@ footer {
 }
 .contact {
  display: block;
- margin-left: -9.8%;
+ margin-left: -8.7%;
  margin-top: 10px;
- font-size: 2vw;
- margin-bottom: -0.9%;
+ font-size: 1.7vw;
+ margin-bottom: 0%;
 }
 .contact p:first-of-type {
   margin-left: 3px;
-  margin-bottom: -15%;
-  font-size: 1vw;
+  margin-bottom: -7%;
+  font-size: 0.8em;
 }
 .contact p:last-of-type a {
   color: white;
   text-decoration: none;
-  font-size: 1.3vw;
+  font-size: 1em;
   padding: 4px;
   border-radius: 2px;
 }
 #facebook {
   font-family: "Arial";
   font-weight: bolder;
-  font-size: 3vw;
+  font-size: 3em;
 }
 #facebook a {
   color: white;
@@ -292,11 +268,12 @@ footer {
     padding-bottom: 50px;
   }
  .biografija-text {
+   width: 100%;
    position: relative;
    top: 10px;
    left: 0;
    right:0;
-   font-size:1.7vw;
+   font-size:1.5vw;
   }
   .biografija img {
      width: 270px;
@@ -341,22 +318,38 @@ footer {
     line-height: 28px;
     font-size: 140%;
   }
+  .mima-text {
+    font-size: 1.3vw;
+    line-height: 34px;
+  }
 }
 @media screen and (min-width: 1900px){
   .biografija-text {
     font-size: 170%;
     line-height: 34px;
   }
+  .mima-text {
+    font-size: 1.3vw;
+    line-height: 40px;
+  }
 }
-
+@media screen and (min-width: 769px)  and (max-width: 900px) {
+  .biografija-text {
+    font-size: 1.8vw;
+  }
+}
 @media screen and (max-width: 768px) {
   .biografija-text {
-    font-size:1.9vw;
-   }
-   .art-blok1, .art-blok2, .planina {
+    font-size: 2.1vw;
+  }
+  .art-blok1, .art-blok2, .planina {
      font-size: 0.8em;
    }
   .about, .about2 {
-    font-size: 2vw;
+    font-size: 2.2vw;
+  }
+  footer {
+    margin-top: 37%;
+    height: 12vw;
   }
 }
