--- a/knjiga.css
+++ b/knjiga.css
@@ -180,15 +180,18 @@ body {
 }
 .mima-personal img:last-of-type {
   margin-left: 1.8%;
-  margin-bottom: -50px;
+  width:24%;
+  height: auto;
+  margin-bottom: 0%;
 }
 .mima-text {
   margin-top: 40px;
   position: absolute;
   left: 40%;
-  font-size: 1.3vw;
+  font-size: 1.32vw;
+  font-weight: bold;
   color: #3d6877;
-  line-height: 24px;
+  line-height: 130%;
 }
 #mima {
   font-family: "Sacramento";
@@ -221,7 +224,7 @@ footer {
  margin-left: -8.7%;
  margin-top: 10px;
  font-size: 1.7vw;
- margin-bottom: 0%;
+ margin-bottom: 0.2%;
 }
 .contact p:first-of-type {
   margin-left: 3px;
@@ -253,9 +256,9 @@ footer {
   padding: 8px;
   border-radius: 3px;
   text-decoration: none;
-  font-size: 1.5vw;
+  font-size: 1.3vw;
   background-color: #90e0ef;
-  font-style: italic;
+  font-family: monospace;
 }
 
 /* Responsive */
@@ -287,13 +290,10 @@ footer {
   }
   .mima-text {
     font-size: 1.3vw;
-    line-height: 17px;
+    line-height:130%;
   }
   .mima-personal img {
     width: 28%;
-  }
-  .mima-personal img:last-of-type {
-    margin-bottom: -35px;
   }
   .art-blok1, .art-blok2, .planina {
     font-size: 0.9em;
@@ -320,22 +320,24 @@ footer {
   }
   .mima-text {
     font-size: 1.3vw;
-    line-height: 34px;
   }
 }
-@media screen and (min-width: 1900px){
+@media screen and (min-width: 1900px) {
   .biografija-text {
     font-size: 170%;
     line-height: 34px;
   }
   .mima-text {
     font-size: 1.3vw;
-    line-height: 40px;
   }
 }
 @media screen and (min-width: 769px)  and (max-width: 900px) {
   .biografija-text {
     font-size: 1.8vw;
+  }
+  .mima-text {
+    font-size: 1.3vw;
+    line-height: 18px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -349,7 +351,8 @@ footer {
     font-size: 2.2vw;
   }
   footer {
+    max-width:100%;
     margin-top: 37%;
-    height: 12vw;
+    height: auto;
   }
 }
