--- a/knjiga.css
+++ b/knjiga.css
@@ -56,6 +56,12 @@ body {
   z-index: 1;
   font-family: "Marion";
 }
+.mobilni {
+  font-size: 1.1em; 
+  padding: 12px;
+  text-align: justify;
+  width: 90%;
+}
 /* Druga sekcija (Wingdings 2, simbol */
 .biografija span {
   opacity: 0.5;
@@ -243,13 +249,13 @@ footer {
 }
 #pismo {
   font-family: "Wingdings";
-  font-size: 5vw;
+  font-size: 7vw;
   font-weight: 100;
 }
 .contact {
  display: block;
- margin-left: -10.5%;
- margin-top: 10px;
+ margin-left: -14.5%;
+ margin-top: 20px;
  font-size: 1.7vw;
  margin-bottom: 0.2%;
 }
