--- a/knjiga.css
+++ b/knjiga.css
@@ -57,7 +57,7 @@ body {
   font-family: "Marion";
 }
 .mobilni {
-  font-size: 1.1em; 
+  font-size: 1em; 
   padding: 12px;
   text-align: justify;
   width: 90%;
@@ -475,4 +475,9 @@ footer {
     font-size: 2.2em;
   }
 
+}
+@media screen and (max-width: 500px) {
+  .mobilni {
+    font-size: 0.7em;
+  }
 }
