--- a/knjiga.css
+++ b/knjiga.css
@@ -58,7 +58,7 @@ body {
 }
 .mobilni {
   font-size: 1em; 
-  padding: 12px;
+  padding: 25px 2px;
   text-align: justify;
   width: 90%;
 }
@@ -255,9 +255,8 @@ footer {
 .contact {
  display: block;
  margin-left: -14.5%;
- margin-top: 20px;
  font-size: 1.7vw;
- margin-bottom: 0.2%;
+ margin-bottom: -2%;
 }
 .contact p:first-of-type {
   margin-left: 3px;
@@ -302,7 +301,6 @@ footer {
 
 
 /* Responsive */
-
 @media screen and (max-width: 1023px) {
   .biografija {
     flex-direction: column-reverse;
@@ -314,7 +312,7 @@ footer {
    width: 100%;
    position: relative;
    top: 10px;
-   left: 0;
+   left: -3%;
    right:0;
    font-size:1.5vw;
   }
@@ -335,104 +333,15 @@ footer {
     font-size: 2.5em;
   }
 }
-
-@media screen and (min-width: 1200px) and (max-width: 1399px) {
-  .biografija img {
-    width: 30%;
-   }
-  .biografija-text {
-    font-size: 120%;
-    line-height: 24px;
+@media screen and (max-width: 500px) {
+  .mobilni {
+    font-size: 0.9em;
   }
-}
-
-@media screen and (min-width: 1400px) {
-  .biografija img {
-   width: 32%;
-  }
-  .biografija-text {
-    line-height: 28px;
-    font-size: 140%;
-  }
-  .palme2, .palme3, .planina p, .art-blok1 {
-   font-size: 1.4em;
-  }
-  .mima-text {
-    font-size: 1.3vw;
-  }
-}
-@media screen and (min-width: 1600px) {
-  .biografija img {
-   width: 32%;
-  }
-  .biografija-text {
-    line-height: 30px;
-    font-size: 160%;
-  }
-  .palme2, .palme3, .planina p, .art-blok1 {
-   font-size: 1.5em;
-  }
-  .mima-text {
-    font-size: 1.3vw;
-  }
-}
-@media screen and (min-width: 1900px) {
-  .biografija-text {
-    font-size: 170%;
-    line-height: 34px;
-  }
-  .palme2, .palme3, .planina p, .art-blok1 {
+  #just-mima {
+    font-family: "Sacramento", "Sophia";
     font-size: 1.7em;
-   }
-  .mima-text {
-    font-size: 1.3vw;
   }
-}
-@media screen and (min-width: 2200px) {
-  .biografija-text {
-    font-size: 190%;
-    line-height: 37px;
-  }
-  .palme2, .palme3, .planina p, .art-blok1 {
-    font-size: 1.9em;
-   }
-  .mima-text {
-    font-size: 1.3vw;
-  }
-}
-@media screen and (min-width: 769px)  and (max-width: 900px) {
-  .biografija-text {
-    font-size: 1.8vw;
-  }
-  .mima-text {
-    font-size: 1.3vw;
-  }
-  .mima-personal {
-    float: left;
-    align-items: flex-end;
-    margin-top: 5%;
-    position: static;
-    margin-left: 5%;
-  }
-  .mima-personal img {
-    width: 24%;
-    height: auto;
-  }
-  .mima-personal img:last-of-type {
-    margin-left: 1.5%;
-    width:20%;
-    height: auto;
-    margin-bottom: -3%;
-  }
-  .mima-text {
-    margin-top: 3.2%;
-    position: absolute;
-    left: 32%;
-    font-size: 1.6vw;
-    font-weight: bold;
-    color: #3d6877;
-    line-height: 126%;
-  }
+
 }
 @media screen and (max-width: 767px) {
   .mima-text {
@@ -468,16 +377,152 @@ footer {
   }
   #pismo {
     padding: 15px;
-    font-size: 3.2em;
+    font-size: 3.7em;
     margin-right: 2%;
   }
   #just-mima {
     font-size: 2.2em;
   }
-
 }
-@media screen and (max-width: 500px) {
-  .mobilni {
-    font-size: 0.9em;
+@media screen and (min-width: 901px) and (max-width: 1023px) {
+  .about, .about2 {
+    font-size: 1.2em;
+  }
+}
+
+ 
+  @media screen and (min-width: 1200px) and (max-width: 1399px) {
+  .biografija img {
+    width: 30%;
+   }
+  .biografija-text {
+    font-size: 120%;
+    line-height: 24px;
+  }
+  .about, .about2 {
+    font-size: 1.4em;
+  }
+}
+
+
+
+
+@media screen and (min-width: 1024px) and (max-width: 1399px) {
+  .biografija img {
+    width: 30%;
+   }
+  .biografija-text {
+    font-size: 120%;
+    line-height: 24px;
+  }
+  .about, .about2 {
+    font-size: 1.4em;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .biografija img {
+   width: 32%;
+  }
+  .biografija-text {
+    line-height: 28px;
+    font-size: 140%;
+  }
+  .palme2, .palme3, .planina p, .art-blok1 {
+   font-size: 1.4em;
+  }
+  .mima-text {
+    font-size: 1.3vw;
+  }
+  .about, .about2 {
+    font-size: 1.5em;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .biografija img {
+   width: 32%;
+  }
+  .biografija-text {
+    line-height: 30px;
+    font-size: 160%;
+  }
+  .palme2, .palme3, .planina p, .art-blok1 {
+   font-size: 1.5em;
+  }
+  .mima-text {
+    font-size: 1.3vw;
+  }
+  .about, .about2 {
+    font-size: 1.7em;
+  }
+}
+@media screen and (min-width: 1900px) {
+  .biografija-text {
+    font-size: 170%;
+    line-height: 34px;
+  }
+  .about, .about2 {
+    font-size: 1.3vw;
+  }
+  .palme2, .palme3, .planina p, .art-blok1 {
+    font-size: 1.8em;
+   }
+  .mima-text {
+    font-size: 1.3vw;
+  }
+  .about, .about2 {
+    font-size: 1.9em;
+  }
+}
+@media screen and (min-width: 2200px) {
+  .biografija-text {
+    font-size: 190%;
+    line-height: 37px;
+  }
+  .palme2, .palme3, .planina p, .art-blok1 {
+    font-size: 2.1em;
+   }
+  .mima-text {
+    font-size: 1.3vw;
+  }
+  .about, .about2 {
+    font-size: 2.5em;
+  }
+}
+@media screen and (min-width: 769px)  and (max-width: 900px) {
+  .biografija-text {
+    font-size: 1.8vw;
+  }
+  .about, .about2 {
+    font-size: 1.1em;
+  }
+  .mima-text {
+    font-size: 1.3vw;
+  }
+  .mima-personal {
+    float: left;
+    align-items: flex-end;
+    margin-top: 5%;
+    position: static;
+    margin-left: 5%;
+  }
+  .mima-personal img {
+    width: 24%;
+    height: auto;
+  }
+  .mima-personal img:last-of-type {
+    margin-left: 1.5%;
+    width:20%;
+    height: auto;
+    margin-bottom: -3%;
+  }
+  .mima-text {
+    margin-top: 3.2%;
+    position: absolute;
+    left: 32%;
+    font-size: 1.6vw;
+    font-weight: bold;
+    color: #3d6877;
+    line-height: 126%;
   }
 }
